Fix safari image stretch

--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,7 @@ img {
 .image-gallery {
   display: flex;
   flex-flow: wrap;
+  align-items: center;
 }
 
 .image-gallery img {
